DHCPClient: don't use AI_ADDRCONFIG

* The DHCP Client is the one configuring interfaces, so it makes no
sense to request address resolution for already configured interfaces
only.
* Fixes #12208